--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- <link -->
-    <!--   rel="stylesheet" -->
-    <!--   href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" -->
-    <!-- /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css"
+    />
   </head>
   <body></body>
 </html>
